# PyRL

./: .gitignore  AUTHORS.txt  LICENSE  LICENSE.txt  README.md  create_env.bat  install.bat  install_atari_roms.bat  install_miniconda.bat  install_pyrl.bat  launch_spyder.bat  make.bat  pyproject.toml  requirements.txt  run_tests.bat  setup.cfg  setup.py  shell.bat  venv_activate.bat  venv_activate_pyrl_dev.bat  venv_activate_pyrl_test.bat  venv_create.bat  venv_deactivate.bat  venv_dev.yml  venv_remove.bat
docs/: Makefile  make.bat
docs/source/: conf.py  index.rst  modules.rst  pyrl.agents.classic.rst  pyrl.agents.rst  pyrl.agents.standard.rst  pyrl.agents.standard.stable_baselines3.rst  pyrl.agents.standard.tensorforce.rst  pyrl.agents.survival.rst  pyrl.agents.survival.tensorforce.rst  pyrl.environments.rst  pyrl.mab.rst  pyrl.mdp.rst  pyrl.replay_buffer.rst  pyrl.rst  srl.mab.rst  srl.mdp.rst  srl.rst
drafts/: install_roms.py
examples/: grid.py
examples/GamblerTriangle/: Test - 01. Pascal Triangle.py
examples/tmp/: openaigym.episode_batch.2.14660.stats.json  openaigym.manifest.2.14660.manifest.json  openaigym.video.2.14660.video000000.meta.json  openaigym.video.2.14660.video000001.meta.json  openaigym.video.2.14660.video000008.meta.json  openaigym.video.2.14660.video000027.meta.json  openaigym.video.2.14660.video000064.meta.json
notebooks/: BotQLearning standalone.ipynb  First_Steps.ipynb  Gambler Automata.ipynb  MDP.ipynb  Recursive GR.ipynb  Untitled.ipynb  dqn_example.ipynb  gym.ipynb  gym_example.py  sb3_dqn_example.ipynb  test_survival-FP-GUI.ipynb  test_survival-FP.ipynb  test_survival.ipynb  tf_a2c_example.ipynb  tf_dqn_example.ipynb  tf_ppo_example.ipynb
notebooks/GamblerBandits/: 01_Simple_Ex.ipynb  2020_ORIJ_Multiarmed_Gambler_Bandits.ipynb  AAMAS_2021_Multiarmed_Gambler_Bandits_[exported].ipynb  Basics.ipynb  ECML_2020_stop_beta_gambler_[exported].ipynb  IJAR_2020_decisional_gambling_process_[exported].ipynb  MAGB - Fixed Policy.ipynb  MAGB.ipynb  Spring_Chapter_2022_Multiarmed_Gambler_Bandits.ipynb  UCB Alpha.ipynb  Untitled.ipynb  Untitled1.ipynb  beta_gambler.ipynb  setup.py  stop_beta_gambler_[exported].ipynb
notebooks/GamblerTriangle/: A - Gambler Triangle with Infinite Goal.ipynb  Approximating the sum of catalan numbers.ipynb  Complete - 01. Pascal Triangle.ipynb  Complete - 01.b. Pascal Matrices.ipynb  Complete - 01.c. Pascal Triangle Properties.ipynb  Complete - 01.d. Valued and Multidimensional Pascal Triangles.ipynb  Complete - 01.e. Extended Pascal Triangle.ipynb  Complete - 01.f. Displaced Pascal Triangle.ipynb  Complete - 01.g. Truncated Pascal Triangle.ipynb  Complete - 02. Centered Triangle.ipynb  Complete - 02.b. Rewarded Triangle.ipynb  Complete - 03. Budgeted Triangle.ipynb  Complete - 03.b. Displaced Rewarded Triangles.ipynb  Complete - 03.c. Truncated Centered and Budgeted Triangles.ipynb  Complete - 03.d. Truncated Rewarded and Displaced Triangles.ipynb  Complete - 04. Mirrored Triangles.ipynb  Complete - 04.b. Pivoted and Other Mirrored Triangles.ipynb  Complete - 05. Bounded Centered and Budgeted Triangles.ipynb  Complete - 05.b. Bounded Rewarded and Displaced Triangles.ipynb  Complete - 06. Surviving Triangles.ipynb  Complete - 06.b. Catalan Triangle.ipynb  Complete - 07. Bi-Bounded Centered and Budgeted Triangles.ipynb  Complete - 07. Gambler Triangles.ipynb  Complete - 08. From the Pascal Triangle to the Binomial Distribution.ipynb  Old - Coefficients_for_GR_in_exact_time_[exported].ipynb  Old - Copie_de_catalan_cominatorial_[exported].ipynb  setup.py  util - binomial coefficient.ipynb
notebooks/GamblersRuin/: 00 - Introduction to the Gambler's Ruin Problem.ipynb  01 - Gamblers Ruin Plot.ipynb  Gamblers Ruin Plot (old).ipynb  coin_games.ipynb
notebooks/drafts/: BotQLearning.ipynb  BotQLearning_Java.ipynb
notebooks/drafts/MyMAB/: 01_Simple_Ex (2).ipynb  01_Simple_Ex.ipynb  Bernoulli_Gambler_Sim (2).ipynb  Bernoulli_Gambler_Sim.ipynb  README.md  beta_gambler (2).ipynb  beta_gambler.ipynb  old_CyMAB_01_simple.ipynb  proto_MAB_viewer.ipynb  ref_MAB1_BOOK_RL_An_Introduction.ipynb  ref_MAB2_BOOK_RL_An_Introduction.ipynb  requirements.txt  setup.py
notebooks/drafts/SurvivalMAB_Extra/: 01_simple.ipynb  02_averaged.ipynb  02_averaged_cyber_ex.ipynb  03_widget (2).ipynb  03_widget.ipynb  04_Bernoulli_Comparison.ipynb  04_MAB1.ipynb  04_multiple_algorithms.ipynb  05_multiple_algorithms_avereged.ipynb  CyMAB.ipynb  CyMAB_01.ipynb  MAB2-Copy1.ipynb  X_test_mult.ipynb  posit_prob.ipynb
notebooks/drafts/Utils/: Bernoulli conjugate Beta.ipynb  (+3 more)
notebooks/test_RL_melvine/: requirements.txt  testRL.ipynb
src/pyrl/: __init__.py  _base.py  agent.py  debugger.py  env.py  gr.py  gui.py  renderer.py  sim.py  space.py  system.py  utils.py
src/srl/: gr.py
tests/: 0_import_tests.py  grid_test.py  grid_test_comparing_thresholds.py  grid_test_massive.py  grid_test_sb3_dqn.py  grid_test_visual.py  grid_test_visual_policy_iteration.py  gym_test.py  mdptoolbox_test.py  river_raid_sb3.py  sb3_test.py  simple_test.py  test_smab.py  tf_grid_test.py  triangles.py
(+64 files in other folders)
