[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyrl"
version = "0.0.1"
authors = [
  {name="Filipo STUDZINSKI PEROTTO", email="filipo.perotto@onera.fr"},
  {name="Aymane OUAHBI", email="aymane.ouahbi@onera.fr"},
  {name="Melvine NARGEOT", email="melvine.nargeot@onera.fr"},
]
description = "Safe and Survival Reinforcement Learning"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
	'numpy',
	'scipy',
	'matplotlib',
	'pandas',
	'tqdm',
	'SMPyBandits'
]

[project.urls]
"Homepage" = "https://github.com/fsperotto/pyrl"
"Bug Tracker" = "https://github.com/fsperotto/pyrl/issues"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["pyrl", "pyrl.mab", "pyrl.mdp", "pyrl.replay_buffer", "pyrl.environments", "pyrl.agents", "pyrl.agents.classic", "pyrl.agents.survival"]

#[tool.setuptools.packages.find]
#where = ["src"]