[options]

package_dir =
    = src

packages =
    pyrl
    pyrl.mab
    pyrl.mdp
    pyrl.replay_buffer
    pyrl.agents
    pyrl.agents.survival
    pyrl.environments

install_requires =
    numpy
    scipy
    matplotlib
    pandas
    tqdm
	ray
    SMPyBandits
	gymnasium
	pygame
	pymdptoolbox
	tensorforce
